<resources>
    <string name="app_name">NotesApp</string>
    <string name="ashish">Ashish</string>
    <string name="notes_app">Notes App</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user_register_here">New User ? Register Here</string>
    <string name="create_account">Create account</string>
    <string name="your_name">Your name</string>
    <string name="your_email_id">Your email ID</string>
    <string name="set_password">Set Password</string>
    <string name="register_here">Register here</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
</resources>